--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <img src="./casablanca.jpg" />
         <ion-card-header>
           <ion-card-subtitle>Destination</ion-card-subtitle>
-          <ion-card-title>Madison, WI</ion-card-title>
+          <ion-card-title>Casablanca, WI</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          Founded in 1829 on an isthmus between Lake Monona and Lake Mendota, Madison was named the capital of the Wisconsin Territory in 1836.
+          Maroc, Founded in 1829 on an isthmus between Lake Monona and Lake Mendota, Madison was named the capital of the Wisconsin Territory in 1836.
         </ion-card-content>
       </ion-card>
     </ion-content>
