Changement de l'image casablanca 2 et le contenu de l'index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ion-header>,
     <ion-content fullscreen>
       <ion-card>
-        <img src="./casablanca.jpg" />
+        <img src="./casablanca2.jpg" />
         <ion-card-header>
           <ion-card-subtitle>Destination</ion-card-subtitle>
           <ion-card-title>Casablanca, WI</ion-card-title>
